fix(blog): fix scroll up button disappearing behind media

--- a/src/components/layouts/BlogLayout.module.scss
+++ b/src/components/layouts/BlogLayout.module.scss
@@ -16,6 +16,7 @@
   padding: var(--gap-very-large);
   transition: var(--duration-medium) var(--easing);
   transition-property: opacity, transform;
+  z-index: var(--layer-nav);
   
   @media (max-width: queries.$mw-mobile) {
     padding: var(--gap-large);
